hphp/test/zend/good/ext-spl/SplObjectStorage_setInfo_empty_storage.php
<?php

$s = new SplObjectStorage();

var_dump($s->setInfo('some_value'));

?>