hphp/test/zend/bad/ext-spl/SplObjectStorage_getInfo_empty_storage.php
<?php

$s = new SplObjectStorage();

var_dump($s->getInfo());

?>